--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,5 @@ tornado>=4.2.1,<5.0; python_version >= '3.4'
 
 # Required by Tornado to handle threads stuff.
 futures>=2.0; python_version < '3.0'
-M2Crypto>=0.35.2
+pycryptodomex
+#M2Crypto>=0.35.2
