--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+git+https://github.com/Ch3LL/salt.git@2019.2.2
 Jinja2
 # This should be changed to msgpack-python for Packages
 # msgpack-python>0.3,!=0.5.5
@@ -11,4 +12,6 @@ tornado>=4.2.1,<5.0; python_version >= '3.4'
 # Required by Tornado to handle threads stuff.
 futures>=2.0; python_version < '3.0'
 pycryptodomex
+
+# TODO: Building with a custom openssl 1.1.1 on centos 6 is failing to compile M2Crypto, this should be fixed in the future as M2Crypto is prefered
 #M2Crypto>=0.35.2
