Add the ability to build from a spec file

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# We had to apply a patch to salt, once this is in a release we will go back to release versions
 git+https://github.com/Ch3LL/salt.git@2019.2.2
 Jinja2
 # This should be changed to msgpack-python for Packages
