--- a/conf/basic.conf
+++ b/conf/basic.conf
@@ -1,3 +1,4 @@
-name: salt
-requirements: conf/base.txt
-run: conf/default_run.py
+pop_build:
+  name: salt
+  requirements: conf/base.txt
+  run: conf/default_run.py
